--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/Users/puzan/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/puzan/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\puzan\\GlassFish_Server\\glassfish;C:\\Users\\puzan\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/puzan/GlassFish_Server
+selected.browser=Chrome
 user.properties.file=C:\\Users\\puzan\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
